Revertido para versao original FisioVip

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clínica Di Mango | Fisioterapia Integrativa & Esportiva no Rio de Janeiro</title>
+    <title>FisioVip | Fisioterapia Integrativa & Esportiva no Rio de Janeiro</title>
     <meta name="description"
-        content="Clínica Di Mango - Cuidado premium para o seu movimento. Fisioterapia integrativa, esportiva, osteopatia, quiropraxia e recovery no RJ. Tratamento individualizado com base em evidência científica.">
+        content="FisioVip - Cuidado premium para o seu movimento. Fisioterapia integrativa, esportiva, osteopatia, quiropraxia e recovery no RJ. Tratamento individualizado com base em evidência científica.">
     <meta name="keywords"
         content="fisioterapia integrativa, fisioterapia esportiva, osteopatia, quiropraxia, recovery muscular, fisioterapia Rio de Janeiro, fisioterapia RJ, tratamento de dor">
-    <meta name="author" content="Clínica Di Mango">
+    <meta name="author" content="FisioVip">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Clínica Di Mango | Fisioterapia Integrativa & Esportiva">
+    <meta property="og:title" content="FisioVip | Fisioterapia Integrativa & Esportiva">
     <meta property="og:description"
         content="Cuidado premium para o seu movimento. Tratamento individualizado com base em evidência científica.">
     <meta property="og:type" content="website">
@@ -37,7 +37,7 @@
     <header class="header" id="header">
         <div class="container">
             <a href="#inicio" class="logo">
-                <span class="logo-text">Clínica <span class="logo-accent">Di Mango</span></span>
+                <span class="logo-text">Fisio<span class="logo-accent">Vip</span></span>
             </a>
 
             <nav class="nav" id="nav">
@@ -52,7 +52,7 @@
                 </ul>
             </nav>
 
-            <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="btn btn-whatsapp header-cta">
+            <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="btn btn-whatsapp header-cta">
                 <i data-lucide="message-circle"></i>
                 <span>Agendar pelo WhatsApp</span>
             </a>
@@ -76,9 +76,8 @@
                     Fisioterapia Integrativa
                 </span>
                 <h1 class="hero-title">Cuidado premium para o seu <span class="text-gradient">movimento</span></h1>
-                <p class="hero-subtitle">Na Clínica Di Mango, unimos ciência e cuidado humanizado para oferecer
-                    tratamentos personalizados que vão além da dor. Recupere sua qualidade de vida com quem entende do
-                    assunto.</p>
+                <p class="hero-subtitle">Na FisioVip, unimos ciência e cuidado humanizado para oferecer tratamentos
+                    personalizados que vão além da dor. Recupere sua qualidade de vida com quem entende do assunto.</p>
 
                 <ul class="hero-features">
                     <li>
@@ -96,11 +95,11 @@
                 </ul>
 
                 <div class="hero-cta">
-                    <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="btn btn-primary btn-lg">
+                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="btn btn-primary btn-lg">
                         <i data-lucide="calendar"></i>
                         Agendar agora
                     </a>
-                    <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="btn btn-outline btn-lg">
+                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="btn btn-outline btn-lg">
                         <i data-lucide="message-circle"></i>
                         Falar no WhatsApp
                     </a>
@@ -129,10 +128,10 @@
             <div class="sobre-grid">
                 <div class="sobre-content">
                     <span class="section-badge">Sobre Nós</span>
-                    <h2 class="section-title">Conheça a <span class="text-gradient">Clínica Di Mango</span></h2>
-                    <p class="sobre-text">A Clínica Di Mango nasceu da paixão por transformar vidas através do
-                        movimento. Somos uma clínica de fisioterapia integrativa que acredita no tratamento completo e
-                        individualizado, onde cada paciente é único e merece atenção exclusiva.</p>
+                    <h2 class="section-title">Conheça a <span class="text-gradient">FisioVip</span></h2>
+                    <p class="sobre-text">A FisioVip nasceu da paixão por transformar vidas através do movimento. Somos
+                        uma clínica de fisioterapia integrativa que acredita no tratamento completo e individualizado,
+                        onde cada paciente é único e merece atenção exclusiva.</p>
                     <p class="sobre-text">Nossa abordagem vai além do tratamento de sintomas. Buscamos a causa raiz do
                         problema, utilizando técnicas baseadas em evidências científicas combinadas com um olhar humano
                         e acolhedor.</p>
@@ -212,7 +211,7 @@
                         <li>Fibromialgia</li>
                         <li>Dores persistentes</li>
                     </ul>
-                    <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="servico-cta">
+                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
                         Saiba mais <i data-lucide="arrow-right"></i>
                     </a>
                 </article>
@@ -230,7 +229,7 @@
                         <li>Otimização de performance</li>
                         <li>Prevenção de lesões</li>
                     </ul>
-                    <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="servico-cta">
+                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
                         Saiba mais <i data-lucide="arrow-right"></i>
                     </a>
                 </article>
@@ -249,7 +248,7 @@
                         <li>Múltiplas técnicas</li>
                         <li>Abordagem holística</li>
                     </ul>
-                    <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="servico-cta">
+                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
                         Agendar <i data-lucide="arrow-right"></i>
                     </a>
                 </article>
@@ -267,7 +266,7 @@
                         <li>Cefaleias tensionais</li>
                         <li>Disfunções articulares</li>
                     </ul>
-                    <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="servico-cta">
+                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
                         Saiba mais <i data-lucide="arrow-right"></i>
                     </a>
                 </article>
@@ -285,7 +284,7 @@
                         <li>Hérnias de disco</li>
                         <li>Travamentos</li>
                     </ul>
-                    <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="servico-cta">
+                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
                         Saiba mais <i data-lucide="arrow-right"></i>
                     </a>
                 </article>
@@ -303,7 +302,7 @@
                         <li>Recuperação acelerada</li>
                         <li>Prevenção de overtraining</li>
                     </ul>
-                    <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="servico-cta">
+                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
                         Saiba mais <i data-lucide="arrow-right"></i>
                     </a>
                 </article>
@@ -316,7 +315,7 @@
         <div class="container">
             <div class="section-header">
                 <span class="section-badge">Benefícios</span>
-                <h2 class="section-title">Por que escolher a <span class="text-gradient">Clínica Di Mango</span>?</h2>
+                <h2 class="section-title">Por que escolher a <span class="text-gradient">FisioVip</span>?</h2>
                 <p class="section-subtitle">Nossos tratamentos são desenvolvidos para proporcionar resultados reais e
                     duradouros</p>
             </div>
@@ -362,7 +361,7 @@
         <div class="container">
             <div class="section-header">
                 <span class="section-badge">Para Quem é</span>
-                <h2 class="section-title">A Clínica Di Mango é para <span class="text-gradient">você</span></h2>
+                <h2 class="section-title">A FisioVip é para <span class="text-gradient">você</span></h2>
                 <p class="section-subtitle">Atendemos diversos perfis de pacientes com necessidades específicas</p>
             </div>
 
@@ -425,7 +424,7 @@
                             <i data-lucide="star"></i>
                         </div>
                         <p class="depoimento-text">"Depois de anos sofrendo com dores na coluna, finalmente encontrei um
-                            tratamento que funciona. A equipe da Clínica Di Mango é incrível e muito atenciosa!"</p>
+                            tratamento que funciona. A equipe da FisioVip é incrível e muito atenciosa!"</p>
                         <div class="depoimento-author">
                             <div class="author-avatar">MR</div>
                             <div class="author-info">
@@ -444,8 +443,8 @@
                             <i data-lucide="star"></i>
                         </div>
                         <p class="depoimento-text">"Como corredor amador, precisava de um profissional que entendesse
-                            minhas necessidades. Na Clínica Di Mango, encontrei exatamente isso. Minha performance
-                            melhorou muito!"</p>
+                            minhas necessidades. Na FisioVip, encontrei exatamente isso. Minha performance melhorou
+                            muito!"</p>
                         <div class="depoimento-author">
                             <div class="author-avatar">RF</div>
                             <div class="author-info">
@@ -534,8 +533,8 @@
                     <span class="section-badge">Nossa Estrutura</span>
                     <h2 class="section-title">Um espaço pensado para o seu <span class="text-gradient">bem-estar</span>
                     </h2>
-                    <p class="estrutura-text">A Clínica Di Mango oferece um ambiente premium, projetado para
-                        proporcionar conforto e tranquilidade durante todo o seu tratamento.</p>
+                    <p class="estrutura-text">A FisioVip oferece um ambiente premium, projetado para proporcionar
+                        conforto e tranquilidade durante todo o seu tratamento.</p>
 
                     <div class="diferenciais-list">
                         <div class="diferencial-item">
@@ -660,7 +659,7 @@
             </div>
 
             <div class="como-funciona-cta">
-                <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="btn btn-primary btn-lg">
+                <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="btn btn-primary btn-lg">
                     <i data-lucide="calendar"></i>
                     Agendar minha avaliação
                 </a>
@@ -686,7 +685,7 @@
                             </div>
                             <div>
                                 <h4>WhatsApp</h4>
-                                <a href="https://wa.me/5521967027021" target="_blank" rel="noopener">(21) 96702-7021</a>
+                                <a href="https://wa.me/5521976086122" target="_blank" rel="noopener">(21) 97608-6122</a>
                             </div>
                         </div>
 
@@ -696,7 +695,7 @@
                             </div>
                             <div>
                                 <h4>Telefone</h4>
-                                <a href="tel:+5521967027021">(21) 96702-7021</a>
+                                <a href="tel:+5521976086122">(21) 97608-6122</a>
                             </div>
                         </div>
 
@@ -706,8 +705,8 @@
                             </div>
                             <div>
                                 <h4>Instagram</h4>
-                                <a href="https://www.instagram.com/clinicadimango/" target="_blank"
-                                    rel="noopener">@clinicadimango</a>
+                                <a href="https://www.instagram.com/fisiovip.rj/" target="_blank"
+                                    rel="noopener">@fisiovip.rj</a>
                             </div>
                         </div>
 
@@ -765,7 +764,7 @@
             <div class="cta-content">
                 <h2>Pronto para cuidar do seu movimento?</h2>
                 <p>Agende sua avaliação agora mesmo e dê o primeiro passo para uma vida sem dor.</p>
-                <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="btn btn-whatsapp btn-lg">
+                <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="btn btn-whatsapp btn-lg">
                     <i data-lucide="message-circle"></i>
                     Agendar pelo WhatsApp
                 </a>
@@ -779,15 +778,15 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <a href="#inicio" class="logo">
-                        <span class="logo-text">Clínica <span class="logo-accent">Di Mango</span></span>
+                        <span class="logo-text">Fisio<span class="logo-accent">Vip</span></span>
                     </a>
                     <p class="footer-tagline">Cuidado premium para o seu movimento.</p>
                     <div class="footer-social">
-                        <a href="https://www.instagram.com/clinicadimango/" target="_blank" rel="noopener"
+                        <a href="https://www.instagram.com/fisiovip.rj/" target="_blank" rel="noopener"
                             aria-label="Instagram">
                             <i data-lucide="instagram"></i>
                         </a>
-                        <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" aria-label="WhatsApp">
+                        <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" aria-label="WhatsApp">
                             <i data-lucide="message-circle"></i>
                         </a>
                     </div>
@@ -815,21 +814,21 @@
 
                 <div class="footer-contact">
                     <h4>Contato</h4>
-                    <p><i data-lucide="phone"></i> (21) 96702-7021</p>
-                    <p><i data-lucide="instagram"></i> @clinicadimango</p>
+                    <p><i data-lucide="phone"></i> (21) 97608-6122</p>
+                    <p><i data-lucide="instagram"></i> @fisiovip.rj</p>
                     <p><i data-lucide="map-pin"></i> Rio de Janeiro, RJ</p>
                 </div>
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2024 Clínica Di Mango. Todos os direitos reservados.</p>
-                <p class="footer-slogan">Clínica Di Mango – Cuidado premium para o seu movimento.</p>
+                <p>&copy; 2024 FisioVip. Todos os direitos reservados.</p>
+                <p class="footer-slogan">FisioVip – Cuidado premium para o seu movimento.</p>
             </div>
         </div>
     </footer>
 
     <!-- WhatsApp Float Button -->
-    <a href="https://wa.me/5521967027021" target="_blank" rel="noopener" class="whatsapp-float" aria-label="WhatsApp">
+    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="whatsapp-float" aria-label="WhatsApp">
         <i data-lucide="message-circle"></i>
     </a>
 
