--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <header class="header" id="header">
         <div class="container">
             <a href="#inicio" class="logo">
-                <span class="logo-text">Fisio<span class="logo-accent">Vip</span></span>
+                <img src="visual novo/logo-name.jpeg" alt="FisioVip - Fisioterapia Integrativa & Esportiva"
+                    class="logo-img">
             </a>
 
             <nav class="nav" id="nav">
@@ -45,6 +46,7 @@
                     <li><a href="#inicio" class="nav-link">Início</a></li>
                     <li><a href="#sobre" class="nav-link">Sobre</a></li>
                     <li><a href="#servicos" class="nav-link">Serviços</a></li>
+                    <li><a href="#planos" class="nav-link">Planos</a></li>
                     <li><a href="#beneficios" class="nav-link">Benefícios</a></li>
                     <li><a href="#depoimentos" class="nav-link">Depoimentos</a></li>
                     <li><a href="#estrutura" class="nav-link">Estrutura</a></li>
@@ -200,117 +202,212 @@
             <div class="servicos-grid">
                 <!-- Educação em Dor -->
                 <article class="servico-card">
-                    <div class="servico-icon">
-                        <i data-lucide="brain"></i>
+                    <div class="servico-image">
+                        <img src="visual novo/Educacao.png" alt="Educação em Dor">
+                        <div class="servico-overlay"></div>
                     </div>
-                    <h3 class="servico-title">Educação em Dor</h3>
-                    <p class="servico-desc">Entenda como a dor funciona e aprenda estratégias cientificamente
-                        comprovadas para gerenciá-la. Conhecimento é a primeira ferramenta para sua recuperação.</p>
-                    <ul class="servico-indicacoes">
-                        <li>Dores crônicas</li>
-                        <li>Fibromialgia</li>
-                        <li>Dores persistentes</li>
-                    </ul>
-                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
-                        Saiba mais <i data-lucide="arrow-right"></i>
-                    </a>
+                    <div class="servico-content">
+                        <h3 class="servico-title">Educação em Dor</h3>
+                        <p class="servico-desc">Abordagem biopsicossocial para mudar crenças e mitos sobre a dor.</p>
+                        <a href="detalhes-servico.html?id=educacao-em-dor" class="servico-cta">
+                            Saiba mais <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
                 </article>
 
                 <!-- Fisioterapia Esportiva -->
                 <article class="servico-card">
-                    <div class="servico-icon">
-                        <i data-lucide="dumbbell"></i>
+                    <div class="servico-image">
+                        <img src="visual novo/esportiva.png" alt="Fisioterapia Esportiva">
+                        <div class="servico-overlay"></div>
                     </div>
-                    <h3 class="servico-title">Fisioterapia Esportiva</h3>
-                    <p class="servico-desc">Tratamento especializado para atletas amadores e profissionais. Maximize sua
-                        performance e recupere-se de lesões com protocolos específicos.</p>
-                    <ul class="servico-indicacoes">
-                        <li>Lesões esportivas</li>
-                        <li>Otimização de performance</li>
-                        <li>Prevenção de lesões</li>
-                    </ul>
-                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
-                        Saiba mais <i data-lucide="arrow-right"></i>
-                    </a>
+                    <div class="servico-content">
+                        <h3 class="servico-title">Fisioterapia Esportiva</h3>
+                        <p class="servico-desc">Prevenção e tratamento de lesões com foco no retorno seguro ao esporte.
+                        </p>
+                        <a href="detalhes-servico.html?id=fisioterapia-esportiva" class="servico-cta">
+                            Saiba mais <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
                 </article>
 
-                <!-- Fisioterapia Integrativa -->
-                <article class="servico-card featured">
-                    <div class="servico-badge">Destaque</div>
-                    <div class="servico-icon">
-                        <i data-lucide="activity"></i>
+                <!-- Acupuntura -->
+                <article class="servico-card">
+                    <div class="servico-image">
+                        <img src="visual novo/acupuntura.png" alt="Acupuntura">
+                        <div class="servico-overlay"></div>
                     </div>
-                    <h3 class="servico-title">Fisioterapia Integrativa</h3>
-                    <p class="servico-desc">Nossa abordagem principal. Combinamos diversas técnicas terapêuticas para
-                        tratar o corpo de forma global, considerando aspectos físicos, emocionais e comportamentais.</p>
-                    <ul class="servico-indicacoes">
-                        <li>Tratamento global</li>
-                        <li>Múltiplas técnicas</li>
-                        <li>Abordagem holística</li>
-                    </ul>
-                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
-                        Agendar <i data-lucide="arrow-right"></i>
-                    </a>
+                    <div class="servico-content">
+                        <h3 class="servico-title">Acupuntura</h3>
+                        <p class="servico-desc">Técnica milenar para alívio da dor e equilíbrio energético.</p>
+                        <a href="detalhes-servico.html?id=acupuntura" class="servico-cta">
+                            Saiba mais <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
                 </article>
 
                 <!-- Osteopatia -->
                 <article class="servico-card">
-                    <div class="servico-icon">
-                        <i data-lucide="hand"></i>
+                    <div class="servico-image">
+                        <img src="visual novo/osteopatia.png" alt="Osteopatia">
+                        <div class="servico-overlay"></div>
                     </div>
-                    <h3 class="servico-title">Osteopatia</h3>
-                    <p class="servico-desc">Técnicas manuais suaves e precisas para restaurar a mobilidade e o
-                        equilíbrio do corpo. Tratamos disfunções articulares, musculares e viscerais.</p>
-                    <ul class="servico-indicacoes">
-                        <li>Dores na coluna</li>
-                        <li>Cefaleias tensionais</li>
-                        <li>Disfunções articulares</li>
-                    </ul>
-                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
-                        Saiba mais <i data-lucide="arrow-right"></i>
-                    </a>
+                    <div class="servico-content">
+                        <h3 class="servico-title">Osteopatia</h3>
+                        <p class="servico-desc">Tratamento global focado na causa dos desequilíbrios do corpo.</p>
+                        <a href="detalhes-servico.html?id=osteopatia" class="servico-cta">
+                            Saiba mais <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
                 </article>
 
-                <!-- Quiropraxia -->
+                <!-- Liberação Miofascial -->
                 <article class="servico-card">
-                    <div class="servico-icon">
-                        <i data-lucide="bone"></i>
+                    <div class="servico-image">
+                        <img src="visual novo/Liberacao.png" alt="Liberação Miofascial">
+                        <div class="servico-overlay"></div>
                     </div>
-                    <h3 class="servico-title">Quiropraxia</h3>
-                    <p class="servico-desc">Ajustes articulares seguros e eficazes para aliviar dores e melhorar a
-                        função do sistema musculoesquelético. Resultados rápidos com técnicas de alta precisão.</p>
-                    <ul class="servico-indicacoes">
-                        <li>Dores lombares</li>
-                        <li>Hérnias de disco</li>
-                        <li>Travamentos</li>
-                    </ul>
-                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
-                        Saiba mais <i data-lucide="arrow-right"></i>
-                    </a>
+                    <div class="servico-content">
+                        <h3 class="servico-title">Liberação Miofascial</h3>
+                        <p class="servico-desc">Alívio de tensões musculares e melhora da mobilidade.</p>
+                        <a href="detalhes-servico.html?id=liberacao-miofascial" class="servico-cta">
+                            Saiba mais <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
                 </article>
 
-                <!-- Recovery -->
+                <!-- Ventosaterapia -->
                 <article class="servico-card">
-                    <div class="servico-icon">
-                        <i data-lucide="zap"></i>
+                    <div class="servico-image">
+                        <img src="visual novo/ventosa.png" alt="Ventosaterapia">
+                        <div class="servico-overlay"></div>
                     </div>
-                    <h3 class="servico-title">Recovery</h3>
-                    <p class="servico-desc">Protocolos de recuperação muscular para acelerar sua regeneração pós-treino.
-                        Técnicas modernas para minimizar dores e otimizar seus resultados.</p>
-                    <ul class="servico-indicacoes">
-                        <li>Pós-treino intenso</li>
-                        <li>Recuperação acelerada</li>
-                        <li>Prevenção de overtraining</li>
-                    </ul>
-                    <a href="https://wa.me/5521976086122" target="_blank" rel="noopener" class="servico-cta">
-                        Saiba mais <i data-lucide="arrow-right"></i>
-                    </a>
+                    <div class="servico-content">
+                        <h3 class="servico-title">Ventosaterapia</h3>
+                        <p class="servico-desc">Técnica de sucção para desintoxicação e alívio de dores.</p>
+                        <a href="detalhes-servico.html?id=ventosaterapia" class="servico-cta">
+                            Saiba mais <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
+                </article>
+
+                <!-- Kinesio Tape -->
+                <article class="servico-card">
+                    <div class="servico-image">
+                        <img src="visual novo/kinesio.png" alt="Kinesio Tape">
+                        <div class="servico-overlay"></div>
+                    </div>
+                    <div class="servico-content">
+                        <h3 class="servico-title">Kinesio Tape</h3>
+                        <p class="servico-desc">Bandagem elástica para suporte muscular e redução de edema.</p>
+                        <a href="detalhes-servico.html?id=kinesio-tape" class="servico-cta">
+                            Saiba mais <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
+                </article>
+
+                <!-- Crochetagem -->
+                <article class="servico-card">
+                    <div class="servico-image">
+                        <img src="visual novo/croche.png" alt="Crochetagem">
+                        <div class="servico-overlay"></div>
+                    </div>
+                    <div class="servico-content">
+                        <h3 class="servico-title">Crochetagem</h3>
+                        <p class="servico-desc">Técnica instrumental para tratamento de aderências e restrições.</p>
+                        <a href="detalhes-servico.html?id=crochetagem" class="servico-cta">
+                            Saiba mais <i data-lucide="arrow-right"></i>
+                        </a>
+                    </div>
                 </article>
             </div>
         </div>
     </section>
 
-    <!-- ========== BENEFÍCIOS SECTION ========== -->
+    <!-- ========== PLANOS SECTION ========== -->
+    <section class="section planos" id="planos">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-badge">Nossos Planos</span>
+                <h2 class="section-title">Escolha o plano ideal para <span class="text-gradient">você</span></h2>
+                <p class="section-subtitle">Nossos planos foram desenvolvidos para atender diferentes necessidades e
+                    objetivos</p>
+            </div>
+
+            <div class="planos-grid">
+                <!-- Plano VIP -->
+                <article class="plano-card plano-vip">
+                    <div class="plano-badge">Mais Completo</div>
+                    <div class="plano-image">
+                        <img src="visual novo/plano-vip.jpeg" alt="Plano VIP - Acompanhamento Diário">
+                    </div>
+                    <div class="plano-content">
+                        <h3 class="plano-title">Plano VIP</h3>
+                        <p class="plano-desc">Ideal para atletas e pessoas ativas que querem cuidar do esporte e também
+                            nas tomadas de decisões para o corpo reagir às tarefas cotidianas, treino e rotina de forma
+                            ininterrupta.</p>
+                        <ul class="plano-features">
+                            <li><i data-lucide="check"></i> Acompanhamento diário</li>
+                            <li><i data-lucide="check"></i> Foco total na rotina</li>
+                            <li><i data-lucide="check"></i> Prioridade de atendimento</li>
+                        </ul>
+                        <a href="https://wa.me/5521976086122?text=Olá! Gostaria de saber mais sobre o Plano VIP"
+                            target="_blank" rel="noopener" class="btn btn-whatsapp btn-block">
+                            <i data-lucide="message-circle"></i>
+                            Quero o Plano VIP
+                        </a>
+                    </div>
+                </article>
+
+                <!-- Plano Previne -->
+                <article class="plano-card">
+                    <div class="plano-image">
+                        <img src="visual novo/plano-previne.jpeg" alt="Plano Previne - Cuidado Contínuo">
+                    </div>
+                    <div class="plano-content">
+                        <h3 class="plano-title">Plano Previne</h3>
+                        <p class="plano-desc">Acompanha quem treina e quem vive em movimento para reduzir riscos,
+                            melhorar a fluidez corporal e manter constância, seja no esporte ou no dia a dia.</p>
+                        <ul class="plano-features">
+                            <li><i data-lucide="check"></i> Cuidado contínuo</li>
+                            <li><i data-lucide="check"></i> Confiança para evoluir</li>
+                            <li><i data-lucide="check"></i> Prevenção de lesões</li>
+                        </ul>
+                        <a href="https://wa.me/5521976086122?text=Olá! Gostaria de saber mais sobre o Plano Previne"
+                            target="_blank" rel="noopener" class="btn btn-primary btn-block">
+                            <i data-lucide="calendar"></i>
+                            Quero o Plano Previne
+                        </a>
+                    </div>
+                </article>
+
+                <!-- Plano Essencial -->
+                <article class="plano-card">
+                    <div class="plano-image">
+                        <img src="visual novo/plano-essencial.jpeg" alt="Plano Essencial - Prevenção e Orientação">
+                    </div>
+                    <div class="plano-content">
+                        <h3 class="plano-title">Plano Essencial</h3>
+                        <p class="plano-desc">Se você treina, trabalha em pé, carrega peso ou simplesmente quer viver
+                            sem dor, o Plano Essencial ajuda a prevenir desconfortos e manter o movimento no dia a dia.
+                        </p>
+                        <ul class="plano-features">
+                            <li><i data-lucide="check"></i> Prevenção</li>
+                            <li><i data-lucide="check"></i> Orientação profissional</li>
+                            <li><i data-lucide="check"></i> Vida sem dor</li>
+                        </ul>
+                        <a href="https://wa.me/5521976086122?text=Olá! Gostaria de saber mais sobre o Plano Essencial"
+                            target="_blank" rel="noopener" class="btn btn-primary btn-block">
+                            <i data-lucide="calendar"></i>
+                            Quero o Plano Essencial
+                        </a>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <!-- ===== ===== BENEFÍCIOS SECTION ========== -->
     <section class="section beneficios" id="beneficios">
         <div class="container">
             <div class="section-header">
@@ -778,7 +875,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <a href="#inicio" class="logo">
-                        <span class="logo-text">Fisio<span class="logo-accent">Vip</span></span>
+                        <img src="visual novo/logo-name.jpeg" alt="FisioVip" class="logo-img logo-footer">
                     </a>
                     <p class="footer-tagline">Cuidado premium para o seu movimento.</p>
                     <div class="footer-social">
